# rust_fin_stock

./: Cargo.toml  project_path.md
examples/: create_stock_report.rs  create_stock_report_1.rs  create_stock_report_2.rs  create_stock_report_3.rs  create_stock_report_4.rs  create_stock_report_5.rs  create_stock_report_6.rs  create_stock_report_7.rs  create_stock_report_8.rs  create_stock_report_9.rs  creates_a_new_stock_information_with_data_series_and_show_chart_with_moving_average.rs  creates_stock_report.rs  creates_stock_report_1.rs  csv_read_1.rs  csv_read_2.rs  csv_read_3.rs  csv_read_4.rs  csv_read_5.rs  csv_read_6.rs  csv_read_7.rs  csv_read_8.rs  data_from_file.rs  dataparser.rs  example.rs  struct_change_inside_fn.rs  struct_default.rs  struct_folder_mut.rs
src/: main.rs  main_test.rs
stock_data/: stock_trex_data.csv  stock_trex_data.csv_org
