[package]
name = "rust_fin_stock"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
csv = "1.3.0"
plotters = "0.3.6"
rand = "0.8.5"
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
# serde = "1.0.209"
serde = { version = "1.0.209", features = ["derive"] }

[[example]]
name = "struct_default"
path = "examples/struct_default.rs"
